--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,6 +52,17 @@ android {
 
         setProperty("archivesBaseName", srb2PackageName)
     }
+    if (!project.hasProperty('EXCLUDE_NATIVE_LIBS')) {
+        sourceSets.main {
+            jniLibs.srcDir 'libs'
+        }
+        externalNativeBuild {
+            ndkBuild {
+                path 'jni/Android.mk'
+            }
+        }
+
+    }
 
     externalNativeBuild {
         cmake {
