--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,7 +20,7 @@ jobs:
         distribution: 'temurin'
         cache: gradle
     - name: Build with Gradle
-      run: cd android && ./gradlew assemblegameNoAssets
+      run: cd android && ./gradlew build
     - uses: actions/upload-artifact@v3
       with:
         name: srb2
