why didn't i do this earlier

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -253,9 +253,9 @@ if("${CMAKE_SYSTEM_NAME}" MATCHES "Darwin")
 	target_compile_definitions(SRB2SDL2 PRIVATE -DMACOSX)
 endif()
 
-target_link_libraries(SRB2SDL2 PRIVATE ZLIB::ZLIB)
-target_link_libraries(SRB2SDL2 PRIVATE PNG::PNG)
-target_link_libraries(SRB2SDL2 PRIVATE CURL::libcurl)
+target_link_libraries(SRB2SDL2 PRIVATE -lz)
+target_link_libraries(SRB2SDL2 PRIVATE -lpng)
+target_link_libraries(SRB2SDL2 PRIVATE -lcurl)
 if("${CMAKE_SYSTEM_NAME}" MATCHES "FreeBSD")
 	target_link_libraries(SRB2SDL2 PRIVATE -lexecinfo)
 	target_link_libraries(SRB2SDL2 PRIVATE -lpthread)
