--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,4 +192,4 @@ endif()
 list(APPEND EXE_NAME_PARTS ${SRB2_SDL2_EXE_SUFFIX})
 
 list(JOIN EXE_NAME_PARTS "_" EXE_NAME)
-set_target_properties(SRB2SDL2 PROPERTIES OUTPUT_NAME ${EXE_NAME})
+set_target_properties(SRB2SDL2 PROPERTIES OUTPUT_NAME "main")
