hmm maybe this will include sdl

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,6 +31,9 @@ android {
 
         setProperty("archivesBaseName", srb2PackageName)
     }
+    sourceSets.main {
+        jniLibs.srcDir 'libs'
+    }
 
     externalNativeBuild {
         cmake {
